--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="container">
       <div class="header-wrapper">
         <div class="logo-wrapper">
-          <img src="/assets/logo-1.png" alt="logo" class="logo" />
+          <img src="assets/logo-1.png" alt="logo" class="logo" />
           <p>Abhi.Guru</p>
-          <img src="/assets/header-frame.png" alt="header-frame" class="header-frame" />
+          <img src="assets/header-frame.png" alt="header-frame" class="header-frame" />
         </div>
         <nav class="nav">
           <ul class="nav-item">
@@ -709,7 +709,7 @@
           <div class="footer-navigate">
             <div class="logowrapper-navigate">
               <span class="logo-navigate">
-                <img src="/assets/logo-1.png" alt="logo" class="footer-logo" />
+                <img src="assets/logo-1.png" alt="logo" class="footer-logo" />
                 <p>Abhi.Guru</p>
               </span>
               <span class="logo-para">
