enroll btn centered

--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
               accommodate your schedule.</p>
             <p>Topic-Wise Assignments: Each segment of the course comes with tailored assignments to reinforce the
               concepts learned, enhancing your problem-solving skills.</p>
-            <span><button class="interviewBtn">Enroll Now</button></span>
+            <span class="btn-wrapper"><button class="interviewBtn">Enroll Now</button></span>
           </span>
           <span class="interview-rectangle">
             <img src="assets/Rectangle.png" alt="rect" />
