form validation and styling also display error message

--- a/index.html
+++ b/index.html
@@ -76,30 +76,31 @@
                 <button class="Start-learning">Start Learning</button>
               </span>
             </span>
-            <form class="form">
-              <div class="form-fieldset">
-                <h2>Book a Live Class Today !</h2>
-                <div class="input-wrapper">
-                  <img src="assets/profile.png" alt="profile" />
-                  <input type="text" placeholder="Name" class="name" />
+              <form class="form">
+                <div class="form-fieldset">
+                  <h2>Book a Live Class Today !</h2>
+                  <div class="input-wrapper">
+                    <img src="assets/profile.png" alt="profile" />
+                    <input type="text" placeholder="Name" class="name" />
+                  </div>
+                  <div class="input-wrapper">
+                    <img src="assets/email.png" alt="email" />
+                    <input type="text" placeholder="E-Mail" class="email" />
+                  </div>
+                  <div class="input-wrapper">
+                    <img src="assets/phone.png" alt="phone" />
+                    <input type="number" placeholder="Phone" class="phone" />
+                  </div>
+                  <p class="form-para">
+                    By Clicking Sign Up, You Agree To Our
+                    <a href="#">Term & Conditions</a>
+                  </p>
+                  <div class="errorMessage"></div>
+                  <div class="form-btn">
+                    <button type="submit">Submit</button>
+                  </div>
                 </div>
-                <div class="input-wrapper">
-                  <img src="assets/email.png" alt="email" />
-                  <input type="text" placeholder="E-Mail" class="email" />
-                </div>
-                <div class="input-wrapper">
-                  <img src="assets/phone.png" alt="phone" />
-                  <input type="number" placeholder="Phone" class="phone" />
-                </div>
-                <p class="form-para">
-                  By Clicking Sign Up, You Agree To Our
-                  <a href="#">Term & Conditions</a>
-                </p>
-                <div class="form-btn">
-                  <button type="submit">Submit</button>
-                </div>
-              </div>
-            </form>
+              </form>
           </div>
           <!-- ******************  image ****************** -->
           <div class="banner-image">
